--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -967,19 +967,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dropping  and Creating Table Customers"
+    "Dropping  and Creating Table Customer_ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f001141d688>\n"
+      "<sqlite3.Connection object at 0x7f0011357ce0>\n"
      ]
     },
     {
@@ -1006,7 +1006,7 @@
     "                    \n",
     "                    CREATE TABLE Customer_ID (\n",
     "            id  INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT UNIQUE,\n",
-    "            customer_ID    INTEGER \n",
+    "            customer_ID INTEGER UNIQUE \n",
     "            );\n",
     "                    \n",
     "        ''')\n",
@@ -1192,54 +1192,385 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#print cust_id"
+    "Pruged this sqlite data base inserting algorithm. Please scroll down. This is a O^n algorithm and is running really slow. O^n where min_n = 97,000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " This was a O^n algorithm, which I purged for an O^1 data dump algorithm \n The minimum Asymptotic Time Complixity was O^n , where n_min = 97K \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\ndef add_values_table_db():\\n    conn = sqlite3.connect(\"/home/azafar/Projects/Allstate Purchase Prediction Challenge/Data/AllState_KaggleDB.sqlite\")\\n    \\n    cur = conn.cursor()\\n    \\n    try:\\n    \\n        for cust_id in (train_data[\"customer_ID\"].unique().tolist()):\\n        \\n            if (cust_id is None): continue\\n            \\n            cur.execute(\\'INSERT OR IGNORE INTO Customer_ID (customer_ID) VALUES (?)\\', (cust_id,))\\n            \\n            conn.commit()\\n    \\n    except Exception, e:\\n        print\"Somthing went wrong\"\\n        \\n        print e\\n    \\n    finally:\\n        conn.close()\\n\\nprint \"done\"\\n'"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "print \" This was a O^n algorithm, which I purged for an O^1 data dump algorithm \\n \" \\\n",
+    "      \"The minimum Asymptotic Time Complixity was O^n , where n_min = 97K \"\n",
+    "\n",
+    "\"\"\"\n",
     "def add_values_table_db():\n",
     "    conn = sqlite3.connect(\"/home/azafar/Projects/Allstate Purchase Prediction Challenge/Data/AllState_KaggleDB.sqlite\")\n",
     "    \n",
     "    cur = conn.cursor()\n",
     "    \n",
-    "    for cust_id in (train_data[\"customer_ID\"].unique().tolist()):\n",
+    "    try:\n",
     "    \n",
-    "        if (cust_id is None): continue\n",
+    "        for cust_id in (train_data[\"customer_ID\"].unique().tolist()):\n",
     "        \n",
-    "        cur.execute('''INSERT OR IGNORE INTO Customer_ID (Customer_ID) VALUES (?)''', (cust_id,))\n",
+    "            if (cust_id is None): continue\n",
     "            \n",
-    "        customer_id = cur.fetchall()\n",
-    "        \n",
-    "        \n",
-    "        conn.commit()\n",
-    "        \n",
-    "    conn.close()\n",
+    "            cur.execute('INSERT OR IGNORE INTO Customer_ID (customer_ID) VALUES (?)', (cust_id,))\n",
+    "            \n",
+    "            conn.commit()\n",
     "    \n",
-    "    return customer_id"
+    "    except Exception, e:\n",
+    "        print\"Somthing went wrong\"\n",
+    "        \n",
+    "        print e\n",
+    "    \n",
+    "    finally:\n",
+    "        conn.close()\n",
+    "\n",
+    "print \"done\"\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nprint \"start\"\\n\\nadd_customer_ids = add_values_table_db()\\n\\nprint \"done\"\\n'"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "print \"start\"\n",
+    "\n",
     "add_customer_ids = add_values_table_db()\n",
     "\n",
+    "print \"done\"\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nprint type(run)\\n\\nprint run\\n\\nrun == None\\n\\n'"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "print type(run)\n",
+    "\n",
+    "print run\n",
+    "\n",
+    "run == None\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing and preparing to insert customer ids into sqlite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking the first 10 elements of customer id from the df by converting it to a list. syntax works"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10000000, 10000005, 10000007, 10000013, 10000014, 10000016, 10000019, 10000023, 10000025, 10000026]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (train_data[\"customer_ID\"].unique().tolist())[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please Scroll down, here I was testing if the data was inserted in the sqlite db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nconn = sqlite3.connect(\"/home/azafar/Projects/Allstate Purchase Prediction Challenge/Data/AllState_KaggleDB.sqlite\")\\n    \\ncur = conn.cursor()\\n\\ncur.execute(\\' SELECT customer_ID FROM Customer_ID LIMIT 10\\')\\n\\nrun = cur.fetchall()\\n\\nconn.commit()\\n\\nconn.close()\\n\\nprint run\\n\\n'"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
     "conn = sqlite3.connect(\"/home/azafar/Projects/Allstate Purchase Prediction Challenge/Data/AllState_KaggleDB.sqlite\")\n",
     "    \n",
     "cur = conn.cursor()\n",
     "\n",
-    "cur.execute(' SELECT customer_ID FROM Customer_ID '')\n",
+    "cur.execute(' SELECT customer_ID FROM Customer_ID LIMIT 10')\n",
+    "\n",
+    "run = cur.fetchall()\n",
+    "\n",
+    "conn.commit()\n",
+    "\n",
+    "conn.close()\n",
+    "\n",
+    "print run\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keeping scrolling Down -  more testing here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'to_sql'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-124-ba597d0a3655>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mconn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/home/azafar/Projects/Allstate Purchase Prediction Challenge/Data/AllState_KaggleDB.sqlite\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m train_data[\"customer_ID\"].unique().to_sql(con = conn, name = 'Customer_ID', \n\u001b[0m\u001b[0;32m      4\u001b[0m                                  if_exists='replace',flavor='sqlite')\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'to_sql'"
+     ],
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "conn = sqlite3.connect(\"/home/azafar/Projects/Allstate Purchase Prediction Challenge/Data/AllState_KaggleDB.sqlite\")\n",
+    "\n",
+    "train_data[\"customer_ID\"].unique().to_sql(con = conn, name = 'Customer_ID', \n",
+    "                                 if_exists='replace',flavor='sqlite')\n",
+    "\n",
+    "print \"done\"\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating the Customer_ID Data frame for dumping into the SQLITE DB."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_id_df = pd.DataFrame(train_data[\"customer_ID\"].unique().tolist(), columns=[\"customer_ID\"],dtype='int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10000005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10000007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10000014</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10000005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10000007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10000014</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer_id_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The SQLITE - DB Creation of DF Tables- Dumping customer_ID into the table customer_ID. This is a O^1 algorithm. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect(\"/home/azafar/Projects/Allstate Purchase Prediction Challenge/Data/AllState_KaggleDB.sqlite\")\n",
+    "\n",
+    "customer_id_df.to_sql(con = conn, name = 'Customer_ID', \n",
+    "                                 if_exists='replace',flavor='sqlite')\n",
+    "\n",
+    "print \"done\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing the newly created column customer_ID in sqlite db AllState_Kaggle.sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(10000000,), (10000005,), (10000007,), (10000013,), (10000014,), (10000016,), (10000019,), (10000023,), (10000025,), (10000026,)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect(\"/home/azafar/Projects/Allstate Purchase Prediction Challenge/Data/AllState_KaggleDB.sqlite\")\n",
+    "    \n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute(' SELECT customer_ID FROM Customer_ID LIMIT 10')\n",
     "\n",
     "run = cur.fetchall()\n",
     "\n",
@@ -1251,23 +1582,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 126,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "print type(run)\n",
-    "\n",
-    "print run\n",
-    "\n",
-    "run == None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     ""
    ]
@@ -1293,6 +1609,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     ""
