Scope & Schedule Update - Day 4 - Aug 9th 2016

--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -1680,12 +1680,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    ""
+    "checking the column names to store"
    ]
   },
   {
@@ -1694,7 +1692,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "train_data.ix[:,:].index()"
    ]
   },
   {
