Day 5 -  Start - updating the Notebook

--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -1801,13 +1801,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['customer_ID', 'shopping_pt', 'record_type', 'day', 'time', 'state',\n       'location', 'group_size', 'homeowner', 'car_age', 'car_value',\n       'risk_factor', 'age_oldest', 'age_youngest', 'married_couple',\n       'C_previous', 'duration_previous', 'A', 'B', 'C', 'D', 'E', 'F',\n       'G', 'cost'], dtype=object)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train_data.ix[:,:].index()"
+    "train_data.columns.values"
    ]
   },
   {
