Day 6 - Testing Multiprocessing build3 -V2 - O^mn

--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -2086,15 +2086,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Writing a multiprocessing function for unique customer historical data"
+    "Version 1 - Writing a multiprocessing function for unique customer historical data - O^mn - about 96 mins to run"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nfrom multiprocessing import Lock,Queue,Process, current_process\\nfrom time import time\\n\\ncust_id_list =  cust_id_df[\"customer_ID\"].tolist()\\n\\ncust_hist_data_df_mp = pd.DataFrame(columns=hist_cust_column_list,index= [len(cust_id_list)])\\n\\nprint \"\\n multi processing function of customer historical unique data\"\\n\\ndef shop_pt_fn(train_data):\\n        \"\"\"\\n        returns the df where shopping points are number 1\\n        :return: \\n        \"\"\"\\n        train_data[\"shopping_pt\"] == 1\\n\\n# shopping pt conparision to find shop_pt = 1\\n\\nshop_pt_df =  shop_pt_fn(train_data)\\n\\ndef cust_hist_data_unique_fn(\\n        cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data):\\n    \"\"\"\\n    creates a df of unique customer history using multiprocessing\\n    :return: \\n    \"\"\"\\n    \\n    # returns the df of common historical data of the customer\\n    def hist_cust_data_fn(hist_cust_column_list,train_data):\\n        \"\"\"\\n        returns the df of common historical data of the customer\\n        :param hist_cust_column_list: \\n        :param train_data: \\n        :return: \\n        \"\"\"\\n        return train_data[hist_cust_column_list]\\n    \\n    def cust_id_fn(train_data):\\n        \"\"\"\\n        returns the df of all the customer ids present in the data\\n        :return: \\n        \"\"\"\\n        return train_data[\"customer_ID\"]\\n    \\n    def cust_id_num_fn(cust_id_df, cust_id_counter):\\n        \"\"\"\\n        returns the df of a specific customer id\\n        :return: \\n        \"\"\"\\n        return cust_id_df[\"customer_ID\"][cust_id_counter]\\n    \"\"\"\\n    def shop_pt_fn(train_data):\\n        train_data[\"shopping_pt\"] == 1\\n        \"\"\"\\n        \\n    p_hist_cust_data = Process(target= hist_cust_data_fn, args= (hist_cust_column_list,train_data))\\n    \\n    p_hist_cust_data.start()\\n    \\n    p_cust_id = Process(target=cust_id_fn, args=(train_data))\\n    \\n    p_cust_id.start()\\n    \\n    p_cust_id_num =  Process(target=cust_id_num_fn, args=(cust_id_df, cust_id_counter))\\n    \\n    p_cust_id_num.start()\\n    \\n    #p_shop_pt = Process(target=shop_pt_fn, args=(train_data))\\n    \\n    #p_shop_pt.start()\\n    def multi_process_fn(cust_hist_data_df_mp, cust_id_counter,\\n                         p_hist_cust_data, p_cust_id,p_cust_id_num,shop_pt_df):\\n        \\n        cust_hist_data_df_mp.loc[cust_id_counter] = (\\n            \\n            p_hist_cust_data [p_cust_id == p_cust_id_num] [shop_pt_df]).values.tolist()[0]\\n        \\n    p_multi_process = Process(target=multi_process_fn, args= (\\n        \\n        cust_hist_data_df_mp, cust_id_counter,p_hist_cust_data, p_cust_id,p_cust_id_num,shop_pt_df)\\n                              \\n                              )\\n    p_multi_process.start()\\n    \\n    p_hist_cust_data.join()\\n    \\n    p_cust_id.join()\\n    \\n    p_cust_id_num.join()\\n    \\n    p_shop_pt.join()\\n        \\n    p_multi_process.join()\\n    \\n        \\n\\nprint \"splitting customer id list into 1000 processes\"\\n\\ncust_processes = 1000\\n\\n# splitting the customer id list function\\ndef split_cust_id_fn(cust_id_list, list_size):\\n    \"\"\" This function splits the customer id\"\"\"\\n    \\n    return [cust_id_list[ row_num: row_num + list_size] \\n            \\n            for row_num in xrange(0, len(cust_id_list),list_size)]\\n\\nprint \"\\n saving the splitted list of customer ids\"\\n\\nsplit_cust_id_list = split_cust_id_fn(cust_id_list,len(cust_id_list)/cust_processes)\\n\\nprint split_cust_id_list[:10]\\n\\ntime_taken = time\\n\\nfor cust_id_chunks_list in split_cust_id_list:\\n    for cust_id_counter in cust_id_chunks_list:\\n        \\n        p = Process(target= cust_hist_data_unique_fn, args=(\\n            cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data))\\n        \\n        p.daemon = True\\n        \\n        p.start()\\n        \\n        p.join()\\n\\nprint time()-time_taken\\n\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "'''\n",
+    "\n",
     "from multiprocessing import Lock,Queue,Process, current_process\n",
     "from time import time\n",
     "\n",
@@ -2223,7 +2236,24 @@
     "        \n",
     "        p.join()\n",
     "\n",
-    "print time()-time_taken"
+    "print time()-time_taken\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 2 - Writing a multiprocessing function for unique customer historical data - O^mn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    ""
    ]
   },
   {
