Day 6 - Testing Multiprocessing build3 -V2 - O^mn

--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -2251,9 +2251,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "from multiprocessing import Lock,Queue,Process, current_process\n",
+    "from time import time\n",
+    "\n",
+    "cust_id_list =  cust_id_df[\"customer_ID\"].tolist()\n",
+    "\n",
+    "cust_hist_data_df_mp = pd.DataFrame(columns=hist_cust_column_list,index= [len(cust_id_list)])\n",
+    "\n",
+    "print \"\\n multi processing function of customer historical unique data\"\n",
+    "\n",
+    "\n",
+    "def cust_hist_data_unique_fn(\n",
+    "        cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data):\n",
+    "    \"\"\"\n",
+    "    creates a df of unique customer history using multiprocessing\n",
+    "    :return: \n",
+    "    \"\"\"\n",
+    "    cust_hist_data_df_mp.loc[cust_id_counter] = (train_data[hist_cust_column_list]\n",
+    "                                          \n",
+    "                                          [train_data[\"customer_ID\"] == cust_id_df[\"customer_ID\"][cust_id_counter]]\n",
+    "                                          \n",
+    "                                          [train_data[\"shopping_pt\"] == 1]\n",
+    "                                          \n",
+    "                                          ).values.tolist()[0]\n",
+    "    \n",
+    "\n",
+    "print \"splitting customer id list into 1000 processes\"\n",
+    "\n",
+    "cust_processes = 1000\n",
+    "\n",
+    "# splitting the customer id list function\n",
+    "def split_cust_id_fn(cust_id_list, list_size):\n",
+    "    \"\"\" This function splits the customer id\"\"\"\n",
+    "    \n",
+    "    return [cust_id_list[ row_num: row_num + list_size] \n",
+    "            \n",
+    "            for row_num in xrange(0, len(cust_id_list),list_size)]\n",
+    "\n",
+    "print \"\\n saving the splitted list of customer ids\"\n",
+    "\n",
+    "split_cust_id_list = split_cust_id_fn(cust_id_list,len(cust_id_list)/cust_processes)\n",
+    "\n",
+    "print split_cust_id_list[:10]\n",
+    "\n",
+    "time_taken = time\n",
+    "\n",
+    "for cust_id_chunks_list in split_cust_id_list:\n",
+    "    for cust_id_counter in cust_id_chunks_list:\n",
+    "        \n",
+    "        p = Process(target= cust_hist_data_unique_fn, args=(\n",
+    "            cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data))\n",
+    "        \n",
+    "        p.daemon = True\n",
+    "        \n",
+    "        p.start()\n",
+    "        \n",
+    "        p.join()\n",
+    "\n",
+    "print time()-time_taken\n"
    ]
   },
   {
