--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2103,7 @@
        "'\\n\\nfrom multiprocessing import Lock,Queue,Process, current_process\\nfrom time import time\\n\\ncust_id_list =  cust_id_df[\"customer_ID\"].tolist()\\n\\ncust_hist_data_df_mp = pd.DataFrame(columns=hist_cust_column_list,index= [len(cust_id_list)])\\n\\nprint \"\\n multi processing function of customer historical unique data\"\\n\\ndef shop_pt_fn(train_data):\\n        \"\"\"\\n        returns the df where shopping points are number 1\\n        :return: \\n        \"\"\"\\n        train_data[\"shopping_pt\"] == 1\\n\\n# shopping pt conparision to find shop_pt = 1\\n\\nshop_pt_df =  shop_pt_fn(train_data)\\n\\ndef cust_hist_data_unique_fn(\\n        cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data):\\n    \"\"\"\\n    creates a df of unique customer history using multiprocessing\\n    :return: \\n    \"\"\"\\n    \\n    # returns the df of common historical data of the customer\\n    def hist_cust_data_fn(hist_cust_column_list,train_data):\\n        \"\"\"\\n        returns the df of common historical data of the customer\\n        :param hist_cust_column_list: \\n        :param train_data: \\n        :return: \\n        \"\"\"\\n        return train_data[hist_cust_column_list]\\n    \\n    def cust_id_fn(train_data):\\n        \"\"\"\\n        returns the df of all the customer ids present in the data\\n        :return: \\n        \"\"\"\\n        return train_data[\"customer_ID\"]\\n    \\n    def cust_id_num_fn(cust_id_df, cust_id_counter):\\n        \"\"\"\\n        returns the df of a specific customer id\\n        :return: \\n        \"\"\"\\n        return cust_id_df[\"customer_ID\"][cust_id_counter]\\n    \"\"\"\\n    def shop_pt_fn(train_data):\\n        train_data[\"shopping_pt\"] == 1\\n        \"\"\"\\n        \\n    p_hist_cust_data = Process(target= hist_cust_data_fn, args= (hist_cust_column_list,train_data))\\n    \\n    p_hist_cust_data.start()\\n    \\n    p_cust_id = Process(target=cust_id_fn, args=(train_data))\\n    \\n    p_cust_id.start()\\n    \\n    p_cust_id_num =  Process(target=cust_id_num_fn, args=(cust_id_df, cust_id_counter))\\n    \\n    p_cust_id_num.start()\\n    \\n    #p_shop_pt = Process(target=shop_pt_fn, args=(train_data))\\n    \\n    #p_shop_pt.start()\\n    def multi_process_fn(cust_hist_data_df_mp, cust_id_counter,\\n                         p_hist_cust_data, p_cust_id,p_cust_id_num,shop_pt_df):\\n        \\n        cust_hist_data_df_mp.loc[cust_id_counter] = (\\n            \\n            p_hist_cust_data [p_cust_id == p_cust_id_num] [shop_pt_df]).values.tolist()[0]\\n        \\n    p_multi_process = Process(target=multi_process_fn, args= (\\n        \\n        cust_hist_data_df_mp, cust_id_counter,p_hist_cust_data, p_cust_id,p_cust_id_num,shop_pt_df)\\n                              \\n                              )\\n    p_multi_process.start()\\n    \\n    p_hist_cust_data.join()\\n    \\n    p_cust_id.join()\\n    \\n    p_cust_id_num.join()\\n    \\n    p_shop_pt.join()\\n        \\n    p_multi_process.join()\\n    \\n        \\n\\nprint \"splitting customer id list into 1000 processes\"\\n\\ncust_processes = 1000\\n\\n# splitting the customer id list function\\ndef split_cust_id_fn(cust_id_list, list_size):\\n    \"\"\" This function splits the customer id\"\"\"\\n    \\n    return [cust_id_list[ row_num: row_num + list_size] \\n            \\n            for row_num in xrange(0, len(cust_id_list),list_size)]\\n\\nprint \"\\n saving the splitted list of customer ids\"\\n\\nsplit_cust_id_list = split_cust_id_fn(cust_id_list,len(cust_id_list)/cust_processes)\\n\\nprint split_cust_id_list[:10]\\n\\ntime_taken = time\\n\\nfor cust_id_chunks_list in split_cust_id_list:\\n    for cust_id_counter in cust_id_chunks_list:\\n        \\n        p = Process(target= cust_hist_data_unique_fn, args=(\\n            cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data))\\n        \\n        p.daemon = True\\n        \\n        p.start()\\n        \\n        p.join()\\n\\nprint time()-time_taken\\n\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2253,9 +2253,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nfrom multiprocessing import Lock,Queue,Process, current_process\\nfrom time import time\\n\\ncust_id_list =  cust_id_df[\"customer_ID\"].tolist()\\n\\ncust_hist_data_df_mp = pd.DataFrame(columns=hist_cust_column_list,index= [len(cust_id_list)])\\n\\nprint \"\\n multi processing function of customer historical unique data\"\\n\\n\\ndef cust_hist_data_unique_fn(\\n        cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data):\\n    \"\"\"\\n    creates a df of unique customer history using multiprocessing\\n    :return: \\n    \"\"\"\\n    cust_hist_data_df_mp.loc[cust_id_counter] = (train_data[hist_cust_column_list]\\n                                          \\n                                          [train_data[\"customer_ID\"] == cust_id_df[\"customer_ID\"][cust_id_counter]]\\n                                          \\n                                          [train_data[\"shopping_pt\"] == 1]\\n                                          \\n                                          ).values.tolist()[0]\\n    \\n\\nprint \"splitting customer id list into 1000 processes\"\\n\\ncust_processes = 1000\\n\\n# splitting the customer id list function\\ndef split_cust_id_fn(cust_id_list, list_size):\\n    \"\"\" This function splits the customer id\"\"\"\\n    \\n    return [cust_id_list[ row_num: row_num + list_size] \\n            \\n            for row_num in xrange(0, len(cust_id_list),list_size)]\\n\\nprint \"\\n saving the splitted list of customer ids\"\\n\\nsplit_cust_id_list = split_cust_id_fn(cust_id_list,len(cust_id_list)/cust_processes)\\n\\nprint split_cust_id_list[:10]\\n\\ntime_taken = time\\n\\nfor cust_id_chunks_list in split_cust_id_list:\\n    for cust_id_counter in cust_id_chunks_list:\\n        \\n        p = Process(target= cust_hist_data_unique_fn, args=(\\n            cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data))\\n        \\n        p.daemon = True\\n        \\n        p.start()\\n        \\n        p.join()\\n\\nprint time()-time_taken\\n\\n'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "\n",
@@ -2330,11 +2341,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n multi processing function of customer historical unique data\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'cust_id_counter' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-66-a53b2001738b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         p = Process(target= cust_hist_data_unique_fn, args=(\n\u001b[1;32m---> 28\u001b[1;33m             cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data))\n\u001b[0m\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m         \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdaemon\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cust_id_counter' is not defined"
+     ],
+     "output_type": "error"
+    }
+   ],
    "source": [
-    "n/a"
+    "from multiprocessing import Lock,Queue,Process, current_process\n",
+    "\n",
+    "cust_id_list =  cust_id_df[\"customer_ID\"].tolist()\n",
+    "\n",
+    "cust_hist_data_df_mp = pd.DataFrame(columns=hist_cust_column_list,index= [len(cust_id_list)])\n",
+    "\n",
+    "print \"\\n multi processing function of customer historical unique data\"\n",
+    "\n",
+    "\n",
+    "def cust_hist_data_unique_fn(\n",
+    "        cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data):\n",
+    "    \"\"\"\n",
+    "    creates a df of unique customer history using multiprocessing\n",
+    "    :return: \n",
+    "    \"\"\"\n",
+    "    cust_hist_data_df_mp.loc[cust_id_counter] = (train_data[hist_cust_column_list]\n",
+    "                                          \n",
+    "                                          [train_data[\"customer_ID\"] == cust_id_df[\"customer_ID\"][cust_id_counter]]\n",
+    "                                          \n",
+    "                                          [train_data[\"shopping_pt\"] == 1]\n",
+    "                                          \n",
+    "                                          ).values.tolist()[0]\n",
+    " \n",
+    "\n",
+    "for cust_id_counter in cust_id_list:\n",
+    "        \n",
+    "        p = Process(target= cust_hist_data_unique_fn, args=(\n",
+    "            cust_id_counter,cust_hist_data_df_mp,cust_id_df,hist_cust_column_list, train_data))\n",
+    "        \n",
+    "        p.daemon = True\n",
+    "        \n",
+    "        p.start()\n",
+    "        \n",
+    "        p.join()\n",
+    "        \n",
+    "print cust_hist_data_df_mp.head()"
    ]
   },
   {
