Day 8 - Testing - multiprocessing algorithm V3.3 Testing on a small set.
Splitting the customer ids into smaller pieces.

Time complexity - Order n^3

--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -2348,8 +2348,7 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "from multiprocessing import Lock,Queue,Process, current_process\n",
+    "from multiprocessing import Lock,Queue,Process, current_process, Manager\n",
     "\n",
     "cust_id_list =  cust_id_df[\"customer_ID\"].tolist()\n",
     "\n",
@@ -2357,44 +2356,51 @@
     "\n",
     "cust_hist_data_df_mp =  pd.DataFrame(columns=hist_cust_column_list)\n",
     "    \n",
-    "def process_fn(cust_id_df,cust_id_counter,cust_hist_data_df_mp, hist_cust_column_list,train_data):\n",
+    "def process_fn(cust_id_df,cust_id_counter,cust_hist_data_df_mp, hist_cust_column_list,return_list, train_data):\n",
     "    \n",
     "    #print (train_data[hist_cust_column_list][train_data[\"customer_ID\"] == (\n",
     "    # cust_id_df[\"customer_ID\"][cust_id_counter]][train_data[\"shopping_pt\"] == 1].values.tolist())[0])\n",
     "    \n",
     "    \n",
-    "    cust_hist_data_df_mp.loc[cust_id_counter] = (train_data[hist_cust_column_list]\n",
-    "                                                 \n",
-    "                                                 [train_data[\"customer_ID\"] == cust_id_df[\"customer_ID\"][cust_id_counter]]\n",
-    "                                                 \n",
-    "                                                 [train_data[\"shopping_pt\"] == 1].values.tolist()[0]\n",
-    "                                                 \n",
-    "                                                 )\n",
+    "    cust_info_list = (train_data[hist_cust_column_list]\n",
+    "            \n",
+    "            [train_data[\"customer_ID\"] == cust_id_df[\"customer_ID\"][cust_id_counter]]\n",
+    "            \n",
+    "            [train_data[\"shopping_pt\"] == 1].values.tolist()[0]\n",
+    "            \n",
+    "            )\n",
+    "    \n",
+    "    for count in range(len(cust_info_list)):\n",
+    "        return_list[count] = cust_info_list[count]\n",
     "    \n",
     "    #print cust_id_counter\n",
     "    \n",
     "    #print cust_hist_data_df_mp.loc[cust_id_counter]\n",
     "\n",
-    "p_process_list = []\n",
     "\n",
-    "cust_id_split_counter = cust_id_df.shape[0]/1000\n",
-    "\n",
-    "\n",
-    "for x in range(0,(cust_id_df.shape[0]/1000)):\n",
+    "if __name__ == '__main__':\n",
     "    \n",
-    "    for cust_id_counter in xrange(x* (cust_id_df.shape[0]/1000) ,(x+1) * (cust_id_df.shape[0]/1000)):\n",
-    "        p_process = Process(target= process_fn, args = (cust_id_df,cust_id_counter,cust_hist_data_df_mp, hist_cust_column_list,train_data))\n",
-    "        \n",
-    "        p_process.start()\n",
-    "        \n",
-    "        p_process_list.append(p_process)\n",
+    "    manager1 = Manager()\n",
     "    \n",
-    "   \n",
-    "    for p_process in p_process_list:\n",
-    "        p_process.join()\n",
+    "    return_list = manager1.list([10000150, 'NY', 10150, 1, 1, 5, 'f', 2.0, 74, 37, 1, 2.0, 15.0])\n",
+    "\n",
+    "    cust_id_split_counter = cust_id_df.shape[0]/1000\n",
+    "    \n",
+    "    \n",
+    "    for x in range(0,(cust_id_df.shape[0]/1000)):\n",
+    "        p_process_list = []\n",
     "        \n",
-    "    p_process_list = []\n",
-    "\"\"\""
+    "        for cust_id_counter in xrange(x* (cust_id_df.shape[0]/1000) ,(x+1) * (cust_id_df.shape[0]/1000)):\n",
+    "            p_process = Process(target= process_fn, args = (cust_id_df,cust_id_counter,cust_hist_data_df_mp, hist_cust_column_list,return_list,train_data))\n",
+    "            \n",
+    "            p_process.start()\n",
+    "            \n",
+    "            p_process_list.append(p_process)\n",
+    "       \n",
+    "        for p_process_end in p_process_list:\n",
+    "            p_process_end.join()\n",
+    "            \n",
+    "            cust_hist_data_df_mp.loc[cust_id_counter] = return_list[0]"
    ]
   },
   {
