Day 8 - Testing - multiprocessing algorithm V3.4 Testing on a small set.
Splitting the customer ids into smaller pieces.

Time complexity - Order n^3
Improveming the Big O of time to Order n^2  next

--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -2414,9 +2414,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/etc/Anaconda2/Conda2/lib/python2.7/site-packages/ipykernel/__main__.py:54: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
+     ]
+    }
+   ],
    "source": [
     "from multiprocessing import Lock,Queue,Process, current_process, Manager\n",
     "\n",
@@ -2427,23 +2435,13 @@
     "cust_hist_data_df_mp =  pd.DataFrame(columns=hist_cust_column_list, index=[cust_id_df.shape[0]/1000])\n",
     "    \n",
     "\n",
-    "def cust_id_fn():\n",
-    "    \n",
-    "\n",
     "def process_fn(cust_id_df,cust_id_counter,cust_hist_data_df_mp, hist_cust_column_list,return_list, train_data):\n",
     "    \n",
     "    #print (train_data[hist_cust_column_list][train_data[\"customer_ID\"] == (\n",
     "    # cust_id_df[\"customer_ID\"][cust_id_counter]][train_data[\"shopping_pt\"] == 1].values.tolist())[0])\n",
     "    \n",
     "    \n",
-    "    return_list[0] = (train_data[hist_cust_column_list]\n",
-    "            \n",
-    "            [train_data[\"customer_ID\"] == cust_id_df[\"customer_ID\"][cust_id_counter]]\n",
-    "            \n",
-    "            [train_data[\"shopping_pt\"] == 1].values.tolist()[0]\n",
-    "            \n",
-    "            )\n",
-    "\n",
+    "    return_list[0] = [cust_id_df[\"customer_ID\"][cust_id_counter]]\n",
     "    \n",
     "    #print cust_id_counter\n",
     "    \n",
@@ -2455,10 +2453,15 @@
     "    manager1 = Manager()\n",
     "    \n",
     "    return_list = manager1.list([[10000150, 'NY', 10150, 1, 1, 5, 'f', 2.0, 74, 37, 1, 2.0, 15.0]])\n",
+    "    \n",
+    "    all_cust_id_df_mp = train_data[\"customer_ID\"]\n",
+    "    \n",
+    "    all_hist_cust_column_df = train_data[hist_cust_column_list]\n",
+    "    \n",
+    "    shop_pt_df = train_data[\"shopping_pt\"]\n",
     "\n",
     "    cust_id_split_counter = cust_id_df.shape[0]/1000\n",
-    "    \n",
-    "    \n",
+    "       \n",
     "    for x in range(0,(cust_id_df.shape[0]/1000)):\n",
     "        p_process_list = []\n",
     "        \n",
@@ -2472,47 +2475,88 @@
     "        for p_process_end in p_process_list:\n",
     "            p_process_end.join()\n",
     "            \n",
-    "            cust_hist_data_df_mp.loc[cust_id_counter] = return_list[0]\n"
+    "            cust_hist_data_df_mp.loc[cust_id_counter] = (all_hist_cust_column_df\n",
+    "                                                         \n",
+    "                                                         [all_cust_id_df_mp == return_list[0]]\n",
+    "                                                         \n",
+    "                                                         [shop_pt_df == 1].values.tolist()[0]\n",
+    "                                                         \n",
+    "                                                         )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "customer_ID          1e+07\nstate                   PA\nlocation             10025\ngroup_size               1\nhomeowner                1\ncar_age                  2\ncar_value                f\nrisk_factor              3\nage_oldest              31\nage_youngest            31\nmarried_couple           0\nC_previous               1\nduration_previous       13\nName: 7, dtype: object"
+      "  File \"/etc/Anaconda2/Conda2/lib/python2.7/multiprocessing/connection.py\", line 432, in answer_challenge\n"
      ]
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "  File \"/etc/Anaconda2/Conda2/lib/python2.7/multiprocessing/connection.py\", line 169, in Client\n"
      ]
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "    c = SocketClient(address)\n"
      ]
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "customer_ID          1e+07\nstate                   OH\nlocation             10017\ngroup_size               1\nhomeowner                0\ncar_age                  6\ncar_value                d\nrisk_factor              3\nage_oldest              24\nage_youngest            24\nmarried_couple           0\nC_previous               3\nduration_previous        9\nName: 5, dtype: object"
+      "    message = connection.recv_bytes(256)         # reject large message\n"
      ]
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "  File \"/etc/Anaconda2/Conda2/lib/python2.7/multiprocessing/connection.py\", line 308, in SocketClient\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "KeyboardInterrupt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "    s.connect(address)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  File \"/etc/Anaconda2/Conda2/lib/python2.7/socket.py\", line 228, in meth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "    return getattr(self._sock,name)(*args)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: [Errno 2] No such file or directory\n"
      ]
     },
     {
@@ -2521,7 +2565,7 @@
        "'\\ncust_id_counter = list(range(cust_id_df.shape[0]))\\n\\ndef cust_hist_data_fn(cust_id_df,cust_id_counter,train_data):\\n   return (train_data[hist_cust_column_list]\\n    \\n    [train_data[\"customer_ID\"] == cust_id_df[\"customer_ID\"][cust_id_counter]]\\n    \\n    [train_data[\"shopping_pt\"] == 1]\\n    \\n    ).values.tolist()[0]\\n\\ncust_hist_data_df_mp = pd.DataFrame(columns=hist_cust_column_list)\\n\\ndef map_cust_hist_data_df(cust_id_df,cust_id_counter,cust_hist_data_df_mp,train_data):\\n    \\n    \\n    return (cust_hist_data_df_mp.loc[cust_id_counter] = (train_data[hist_cust_column_list]\\n                                          \\n                                          [train_data[\"customer_ID\"] == cust_id_df[\"customer_ID\"][cust_id_counter]]\\n                                          \\n                                          [train_data[\"shopping_pt\"] == 1]\\n                                          \\n                                          ).values.tolist()[0]\\n\\ncust_hist_data_df_mp_fn = map_cust_hist_data_df(cust_id_df,cust_id_counter,cust_hist_data_df_mp,train_data)\\n\\npool = ThreadPool(7)\\n\\nresults = pool.map(map_cust_hist_data_df(map_cust_hist_data_df,\\n                                         cust_id_df,cust_id_counter,cust_hist_data_df_mp,train_data)\\n\\npool.close()\\n\\npool.join()\\n\\n'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2658,36 +2702,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_ID</th>\n",
+       "      <th>state</th>\n",
+       "      <th>location</th>\n",
+       "      <th>group_size</th>\n",
+       "      <th>homeowner</th>\n",
+       "      <th>car_age</th>\n",
+       "      <th>car_value</th>\n",
+       "      <th>risk_factor</th>\n",
+       "      <th>age_oldest</th>\n",
+       "      <th>age_youngest</th>\n",
+       "      <th>married_couple</th>\n",
+       "      <th>C_previous</th>\n",
+       "      <th>duration_previous</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9020</th>\n",
+       "      <td>10014357.0</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>11429.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>d</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9117</th>\n",
+       "      <td>10014528.0</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>11104.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>e</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.003774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9214</th>\n",
+       "      <td>10014678.0</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>10157.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>f</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9311</th>\n",
+       "      <td>10014832.0</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>14436.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>g</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9408</th>\n",
+       "      <td>10014990.0</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>12026.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>g</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "97"
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_ID</th>\n",
+       "      <th>state</th>\n",
+       "      <th>location</th>\n",
+       "      <th>group_size</th>\n",
+       "      <th>homeowner</th>\n",
+       "      <th>car_age</th>\n",
+       "      <th>car_value</th>\n",
+       "      <th>risk_factor</th>\n",
+       "      <th>age_oldest</th>\n",
+       "      <th>age_youngest</th>\n",
+       "      <th>married_couple</th>\n",
+       "      <th>C_previous</th>\n",
+       "      <th>duration_previous</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9020</th>\n",
+       "      <td>10014357.0</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>11429.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>d</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9117</th>\n",
+       "      <td>10014528.0</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>11104.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>e</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.003774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9214</th>\n",
+       "      <td>10014678.0</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>10157.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>f</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9311</th>\n",
+       "      <td>10014832.0</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>14436.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>g</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9408</th>\n",
+       "      <td>10014990.0</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>12026.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>g</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cust_hist_data_df_mp.shape[0]"
+    "cust_hist_data_df_mp.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print train_data[\"customer_ID\"].tolist()[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data[\"customer_ID\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
    "source": [
     ""
