- saved cust hist data into csv

--- a/AllState_Predict.ipynb
+++ b/AllState_Predict.ipynb
@@ -76,9 +76,9 @@
     }
    ],
    "source": [
-    "train_data_csv = \"/home/azafar/Projects/Allstate-Purchase-Prediction-Challenge/Data/train.csv\"\n",
+    "train_data_csv = \".../Allstate-Purchase-Prediction-Challenge/Data/train.csv\"\n",
     "\n",
-    "test_data_csv = \"/home/azafar/Projects/Allstate-Purchase-Prediction-Challenge/Data/test_v2.csv\"\n",
+    "test_data_csv = \".../Allstate-Purchase-Prediction-Challenge/Data/test_v2.csv\"\n",
     "\n",
     "print \"done - csv file path store\""
    ]
@@ -2514,11 +2514,11 @@
     }
    ],
    "source": [
-    " path = (\"/home/azafar/Projects/Allstate-Purchase-Prediction-Challenge/Data\")\n",
+    "path = (\".../Allstate-Purchase-Prediction-Challenge/Data\")\n",
     "\n",
     "save_file = cust_hist_data_df_mp.to_csv(\"cust_hist_data_df_mp\", path = path, sep=\",\")\n",
     "\n",
-    "print \"saving results as csv\"\n"
+    "print \"saving results as csv\""
    ]
   },
   {
